Implements additional services for digitalTwin
Now anomalies can be given to create digital twin, two services will be registred for each, one notify and one for handling.
