# sensor-anomaly-handler/Anomaly.go
@@ -1,0 +1,5 @@
+package sensoranomalyhandler
+
+type Anomaly struct {
+	AnomalyType string `json:"anomalyType"`
+}
