# sensor-anomaly-handler/sensorAnomalyHandler.go
@@ -1,29 +1,73 @@
 package sensoranomalyhandler
 
-import "github.com/gin-gonic/gin"
+import (
+	"net/http"
 
-type Anomaly struct {
-	AnomalyType string `json:"anomalyType"`
-}
+	additionalservice "github.com/MrDweller/digital-twin-hub/additional-service"
+	"github.com/MrDweller/service-registry-connection/models"
+	"github.com/gin-gonic/gin"
+)
 
 type Service interface {
 	HandleAnomaly(anomaly Anomaly) error
 }
 
 type SensorAnomalyHandler struct {
-	router  *gin.Engine
-	service Service
+	router              *gin.Engine
+	handleableAnomalies []HandleableAnomaly
+	service             Service
+	handlingSystem      models.SystemDefinition
 }
 
-func NewSensorAnomalyHandler(router *gin.Engine) SensorAnomalyHandler {
+func InitAnomalyHandler(handleableAnomalies []HandleableAnomaly, router *gin.Engine, SystemName string) []additionalservice.AdditionalService {
+	additionalServices := []additionalservice.AdditionalService{}
+	handlingSystem := models.SystemDefinition{
+		Address:    "localhost",
+		Port:       5672,
+		SystemName: SystemName,
+	}
+	for _, handleableAnomaly := range handleableAnomalies {
+		handleableAnomaly.setAnomalyHandlingSystem(handlingSystem)
+		additionalServices = append(additionalServices, &handleableAnomaly)
+		additionalServices = append(additionalServices, &NotifyAnomaly{
+			Anomaly: handleableAnomaly.Anomaly,
+		})
+	}
+	sensorAnomalyHandler := newSensorAnomalyHandler(router, handleableAnomalies, handlingSystem)
+	sensorAnomalyHandler.SetupEndpoints()
+
+	return additionalServices
+}
+
+func newSensorAnomalyHandler(router *gin.Engine, handleableAnomalies []HandleableAnomaly, handlingSystem models.SystemDefinition) SensorAnomalyHandler {
 	return SensorAnomalyHandler{
-		router:  router,
-		service: RabbitmqAnomalyHandlerService{},
+		router:              router,
+		handleableAnomalies: handleableAnomalies,
+		service: RabbitmqAnomalyHandlerService{
+			rabbitmqAddress: "localhost",
+			rabbitmqPort:    5672,
+		},
+		handlingSystem: handlingSystem,
 	}
 
 }
 
 func (sensorAnomalyHandler SensorAnomalyHandler) SetupEndpoints() {
-	controller := NewController(sensorAnomalyHandler.service)
-	sensorAnomalyHandler.router.POST("/sensor-anomaly", controller.SensorAnomaly)
+	for _, handleableAnomaly := range sensorAnomalyHandler.handleableAnomalies {
+
+		sensorAnomalyHandler.router.POST(
+			handleableAnomaly.GetService().ServiceDefinition.ServiceUri,
+			func(c *gin.Context) {
+
+				err := sensorAnomalyHandler.service.HandleAnomaly(handleableAnomaly.Anomaly)
+				if err != nil {
+					c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+					return
+				}
+
+				c.Status(http.StatusOK)
+			},
+		)
+
+	}
 }
